--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "standard": "^16.0.3"
+  },
+  "dependencies": {
+    "@chainlink/contracts": "^0.6.0",
+    "@openzeppelin/contracts": "^4.8.1"
   }
 }
